--- a/_config.yml
+++ b/_config.yml
@@ -35,14 +35,9 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: rossSec
-  email: example@domain.com # change to your email address
+  email: rossf26@icloud.com # change to your email address
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/rossSec # change to your GitHub homepage
 
 # Site Verification Settings
 webmaster_verifications:
