--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: rossSec
-  email: rossf26@icloud.com # change to your email address
+  email: unknown@unknown.com # change to your email address
   links:
     - https://github.com/rossSec # change to your GitHub homepage
 
